# Muons-Data-Generation

./: .gitignore  CMakeLists.txt  README.md  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  geant4_todo.md  generator.cc  generator.hh  mu.cc  physics.cc  physics.hh  run.py  run.sh  voxel.txt  voxel.voxel
analysis/: analysis.ipynb
bench/: init_vis.mac  run.mac  run.py  srun.mac
data/: empty2.root  empty2.txt  empty3.txt  emptycont.root  lead.txt  leadcont.txt  plastic.txt  test.txt
macros/: run.mac  vis.mac
source/: CMakeLists.txt  mu.cc
source/include/: muAnalyzer.hh  muDetectorConstruction.hh  muRunManager.hh  muSensorHit.hh  muSensorSD.hh  muTrackAction.hh
source/src/: #PerlinNoise.h#  #muDetectorConstruction.cc#  #muRunAction.cc#  muAnalyzer.cc  muDetectorConstruction.cc  muParticleGun.cc  muParticleGunMessenger.cc  muPhysicsList.cc  muPrimaryGeneratorAction.cc  muRunAction.cc  muRunManager.cc  muSensorHit.cc  muSensorSD.cc
src/: CONSTANTS.hh  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  physics.hh  steppingAction.cc  steppingAction.hh
